--- a/mahlzeit.cabal
+++ b/mahlzeit.cabal
@@ -14,10 +14,15 @@ extra-source-files:  CHANGELOG.md
 executable mahlzeit
   main-is:             Main.hs
   other-modules:       Mahlzeit.Recipe
+                     , Mahlzeit.Find
+                     , Mahlzeit.PrettyPrinter
   build-depends:       base >=4.12 && <4.13
                      , yaml
                      , text
                      , ansi-terminal
+                     , directory
+                     , filepath
+                     , optparse-applicative
   hs-source-dirs:      mahlzeit
   default-language:    Haskell2010
 
