feat(recipes): add more tags

--- a/examples/fried-rice.yml
+++ b/examples/fried-rice.yml
@@ -1,7 +1,7 @@
 title: Easy Vegan Fried Rice
 source: https://www.madeleineolivia.co.uk/blog/easy-vegan-fried-rice
 scale: 2
-tags: [rice]
+tags: [vegan, Asian]
 
 ingredients:
   - ingredient: tofu
