--- a/examples/lentil-curry.yml
+++ b/examples/lentil-curry.yml
@@ -1,7 +1,7 @@
 title: Easy Lentil Curry
 source: https://simpleveganblog.com/easy-lentil-curry/
 scale: 4
-tags: [indian]
+tags: [Indian, Asian, vegan]
 
 ingredients:
   - ingredient: dry lentils
