--- a/examples/maafe.yml
+++ b/examples/maafe.yml
@@ -1,7 +1,7 @@
 title: Vegan Maafe
 source: https://www.chefkoch.de/rezepte/2418781381833932/Vegetarisches-Mafe.html
 scale: 4
-tags: [senegalese, rice]
+tags: [Senegalese, African, vegan]
 
 ingredients:
   - ingredient: kohlrabi-turnip
