--- a/examples/midnight-pupp.yml
+++ b/examples/midnight-pupp.yml
@@ -3,7 +3,7 @@ author: Grand-Hotel Pupp
 source: https://www.afar.com/magazine/czech-please
 scale: 1
 
-tags: [cocktail]
+tags: [cocktail, vegan, alcohol]
 
 ingredients:
   - ingredient: Becherovka
