--- a/examples/pasta.yml
+++ b/examples/pasta.yml
@@ -1,7 +1,7 @@
 title: One Pot Vegan Pasta
 source: https://www.madeleineolivia.co.uk/blog/one-pot-vegan-pasta
 scale: 4
-tags: [noodles]
+tags: [vegan]
 
 ingredients:
   - ingredient: onions
