--- a/examples/porridge.yml
+++ b/examples/porridge.yml
@@ -2,7 +2,7 @@ title: Porridge
 author: Kierán Meinhardt
 scale: 1
 
-tags: [breakfast]
+tags: [vegan, porridge]
 
 ingredients:
 - ingredient: Non-dairy Milk
