--- a/examples/porridge2.yml
+++ b/examples/porridge2.yml
@@ -1,5 +1,5 @@
 title: Porridge
-tags: [porridge, cheap]
+tags: [porridge, vegan]
 scale: 2
 source: https://www.youtube.com/watch?v=0bcGOnkdsHs&t=5s
 
