--- a/examples/satay-noodles.yml
+++ b/examples/satay-noodles.yml
@@ -1,6 +1,6 @@
 title: Vegan Satay Noodles
 source: https://www.madeleineolivia.co.uk/blog/vegan-satay-noodles
-tags: [noodles, asian]
+tags: [vegan, Asian]
 scale: 2
 
 ingredients:
