--- a/examples/jaffa-oats.yml
+++ b/examples/jaffa-oats.yml
@@ -1,7 +1,7 @@
 title: Chocolate Orange Oats
 source: https://www.madeleineolivia.co.uk/blog/chocolate-orange-oats
 scale: 2
-tags: [porridge]
+tags: [porridge, vegan]
 
 ingredients:
   - ingredient: oats
