--- a/examples/roast-potatoes.yml
+++ b/examples/roast-potatoes.yml
@@ -1,7 +1,7 @@
 title: Roast potatoes with paprika
 source: https://www.bbcgoodfood.com/recipes/paprika-roast-potatoes
 scale: 6
-tags: []
+tags: [vegan]
 
 ingredients:
   - ingredient: floury potatoes
