docs: add nutrients to roast potatoes recipe

--- a/examples/roast-potatoes.yml
+++ b/examples/roast-potatoes.yml
@@ -2,6 +2,11 @@ title: Roast potatoes with paprika
 source: https://www.bbcgoodfood.com/recipes/paprika-roast-potatoes
 scale: 6
 tags: [vegan]
+nutrients:
+  kcal: 297
+  fat: 15
+  carbohydrates: 36
+  protein: 4
 
 ingredients:
   - ingredient: floury potatoes
