--- a/mahlzeit.cabal
+++ b/mahlzeit.cabal
@@ -11,9 +11,9 @@ category:            Text
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
-executable mahlzeit
-  main-is:             Main.hs
-  other-modules:       Mahlzeit.Recipe
+library
+  hs-source-dirs:      src
+  exposed-modules:     Mahlzeit.Recipe
                      , Mahlzeit.Find
                      , Mahlzeit.PrettyPrinter
                      , Mahlzeit.Import.MealMaster
@@ -22,10 +22,34 @@ executable mahlzeit
                      , directory
                      , filepath
                      , megaparsec
-                     , optparse-applicative
                      , prettyprinter
+                     , text
+                     , yaml
+  default-language:    Haskell2010
+
+executable mahlzeit
+  hs-source-dirs:      app
+  main-is:             Main.hs
+  build-depends:       mahlzeit
+                     , ansi-terminal
+                     , base
+                     , directory
+                     , filepath
+                     , optparse-applicative
                      , process
                      , text
                      , yaml
-  hs-source-dirs:      src
+  default-language:    Haskell2010
+
+test-suite test-mahlzeit
+  type:                exitcode-stdio-1.0
+  main-is:             Spec.hs
+  hs-source-dirs:      test
+  build-depends:       mahlzeit
+                     , base
+                     , doctest
+                     , megaparsec
+                     , raw-strings-qq
+                     , tasty
+                     , tasty-hunit
   default-language:    Haskell2010
