fix(ci): build with nix

--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Get package index
-      run: cabal update
-    - name: Build
-      run: cabal new-build
+    - name: Install Nix
+      uses: cachix/install-nix-action@v6
+    - name: Build with Nix
+      run: nix-build
